@@ -193,7 +193,7 @@ Restoring_User_Data=Restoring user data...
 Revision=Revision
 Select_Files_To_Remove=Please select the files to remove from the data partition!
 Select_Install_Target_Storage_Media=<html><div style="text-align: center;"><b>Please select the target storage media</b><br>(Multiple selections with Ctrl+left mouse button)<br><b>Minimum required size: {0}</b></div></html>
-Selection_Count=Number of selected storage media: {0}
+Selection_Count=Number of selected storage media: {0} of {1}
 Select_Upgrade_Target_Storage_Media=<html><div style="text-align: center;"><b>Please select the target storage media</b><br>(Multiple selections with Ctrl+left mouse button)<br><b>Minimum required system partition size: {0}</b></div></html>
 Serial_Number=Serial Number
 Serial=Serial
