@@ -185,7 +185,7 @@ Restoring_Exchange_Partition=Stelle Austauschpartition wieder her...
 Restoring_User_Data=Stelle Benutzerdaten wieder her...
 Select_Files_To_Remove=Bitte w\u00e4hlen Sie aus, welche Dateien von der\nDatenpartition gel\u00f6scht werden sollen!
 Select_Install_Target_Storage_Media=<html><div style="text-align: center;"><b>Bitte w\u00e4hlen Sie die Speichermedien aus, auf denen das System installiert werden soll</b><br>(Mehrfachauswahl mit Strg+linke Maustaste)<br><b>Minimal ben\u00f6tigte Gr\u00f6\u00dfe: {0}</b></div></html>
-Selection_Count=Anzahl ausgew\u00e4hlter Speichermedien: {0}
+Selection_Count=Anzahl ausgew\u00e4hlter Speichermedien: {0} von {1}
 Select_Upgrade_Target_Storage_Media=<html><div style="text-align: center;"><b>Bitte w\u00e4hlen Sie die Speichermedien aus, die aktualisiert werden sollen</b><br>(Mehrfachauswahl mit Strg+linke Maustaste)<br><b>Minimal ben\u00f6tigte Gr\u00f6\u00dfe der Systempartition: {0}</b></div></html>
 Serial_Number=Seriennummer
 Serial=Seriennummer
