@@ -140,7 +140,7 @@ Resetting_System_Partition=Reimpostazione partizione di sistema...
 Revision=Revisione
 Select_Files_To_Remove=Selezionare i file da cancellare dalla partizione dati!
 Select_Install_Target_Storage_Media=<html><div style="text-align: center;"><b>Selezionare il supporto di memoria di destinazione</b><br>(Per selezioni multiple : Ctrl+tasto sinistro del mouse)<br><b>Dimensione minima richesta: {0}</b></div></html>
-Selection_Count=Numero dei supporti di memorizzazione selezionati: {0}
+Selection_Count=Numero dei supporti di memorizzazione selezionati: {0}/{1}
 Select_Upgrade_Target_Storage_Media=<html><div style="text-align: center;"><b>Selezionare supporto di memoria di destinazione </b><br>(Per selezioni multiple : Ctrl+tasto sinistro del mouse)<br><b>Dimensione minima della partizione del sistema: {0}</b></div></html>
 Serial=Seriale
 Size=Dimensione
